--- a/composer.json
+++ b/composer.json
@@ -9,7 +9,11 @@
   "type": "project",
   "require": {
     "php": ">=5.5.9",
-    "laravel/framework": "5.2.*"
+    "laravel/framework": "5.2.*",
+    "predis/predis": "1.0.*",
+    "doctrine/dbal": "^2.5",
+    "fideloper/proxy": "^3.1",
+    "pusher/pusher-php-server": "^2.2"
   },
   "require-dev": {
     "fzaninotto/faker": "~1.4",
