--- a/package.json
+++ b/package.json
@@ -1,10 +1,11 @@
 {
   "private": true,
   "devDependencies": {
-    "gulp": "^3.8.8"
-  },
-  "dependencies": {
-    "laravel-elixir": "^4.0.0",
-    "bootstrap-sass": "^3.0.0"
+    "del": "^2.0.0",
+    "gulp": "^3.9.1",
+    "gulp-imagemin": "^2.4.0",
+    "gulp-rename": "^1.2.2",
+    "gulp-rev-all": "^0.8.22",
+    "laravel-elixir": "^5.0.0"
   }
 }
