--- a/bower.json
+++ b/bower.json
@@ -10,6 +10,11 @@
     "bootstrap": "~3.3.6",
     "font-awesome": "~4.5.0",
     "jstzdetect": "~1.0.6",
-    "pusher": "^3.0.0"
+    "pusher": "^3.0.0",
+    "jquery-backstretch": "backstretch#^2.0.4",
+    "textillate": "^0.4.0",
+    "velocity": "^1.2.3",
+    "jquery.easing": "^1.3.1",
+    "toastr": "~2.1.2"
   }
 }
