--- a/bower.json
+++ b/bower.json
@@ -15,6 +15,7 @@
     "textillate": "^0.4.0",
     "velocity": "^1.2.3",
     "jquery.easing": "^1.3.1",
-    "toastr": "~2.1.2"
+    "toastr": "~2.1.2",
+    "js-marker-clusterer": "googlemaps/js-marker-clusterer#2f659a3c288cdb8dfd1940b00080ff31863b08bc"
   }
 }
